--- a/biblio.html
+++ b/biblio.html
@@ -69,6 +69,7 @@
                                     <p>Crawford, Romi. “Yours in Blackness: Blocks, Corners, and Other Desire Settings.” <i>NKA (Brooklyn, N.Y.)</i> 34, no. 1 (2014): 80–89.</p>
                                     <p>Hansell, William. “Gwendolyn Brooks’s “In the Mecca”: A Rebirth into Blackness.” <i>Negro American Literature Forum</i> 8, no. 2 (Summer 1974): 199-209.</p>
                                     <p>Heathcott, Joseph. “Reading the Accidental Archive: Architecture, Ephemera, and Landscape as Evidence of an Urban Public Culture.” <i>Winterthur Portfolio</i> 41, no. 4 (Winter 2007): 239-268.</p>
+                                    <p>Foucault, Michel. ”Panopticonism.” In <i>Discipline and Punish: The Birth of the Prison.</i> New York: Random House, 1977.</p>
                                     <p>Kukrechtova, Daniela. “The Death and Life of a Chicago Edifice: Gwendolyn Brooks’s “In the Mecca.”” <i>African American Review</i> 42, no. 2-3 (Summer/Fall 2009): 457-472.</p>
                                     <p>Lowney, John. “”A material collapse that is Construction”: History and Counter-Memory in Gwendolyn Brooks’s In the Mecca.” <i>MELUS</i> 23, no. 3 (Fall 1998): 3-20.</p>
                                     <p>Martin, John Bartlow. <i>The Strangest Place in Chicago: Pictorial Comment by Ben Shahn. Harper's Magazine,</i> Dec 01, 1950. 86, http://turing.library.northwestern.edu/login?url=https://www-proquest-com.turing.library.northwestern.edu/docview/1301530998?accountid=12861.</p>
