--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="mt-0">The Mecca Flats</h2>
+                        <h2 class="mt-0">A Material Collapse that is Construction</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
                     </div>
