new assets - 360 and MP3

--- a/biblio.html
+++ b/biblio.html
@@ -44,14 +44,15 @@
                         <h2 class="mt-0">Bibliography</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                        <p>Adeyemi, Kemi. “The Practice of Slowness: Black Queer Women and the Right to the City.” <i>GLQ: A Journal of Lesbian and Gay Studies</i> 25, no. 4 (October 2019): 545-567.</p>
+                        <!-- <p>Adeyemi, Kemi. “The Practice of Slowness: Black Queer Women and the Right to the City.” <i>GLQ: A Journal of Lesbian and Gay Studies</i> 25, no. 4 (October 2019): 545-567.</p> -->
                         <p>Attoh, Kafui. “What Kind of Right Is the Right to the City?” <i>Progress in Human Geography</i> 35, no. 5 (February 14, 2011): 669–685.</p>
-                        <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919</i>> Chicago: University of Chicago Press, 2004.</p>
+                        <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919.</i> Chicago: University of Chicago Press, 2004.</p>
                         <p>Bartholomew Ortega, Kirsten. “The Black Flaneuse: Gwendolyn Brooks’s “In the Mecca.” <i>Journal of Modern Literature</i> 30, no.4 (Summer 2007): 139-155. </p>
                         <p>Bledsoe, Wright. “The Pluralities of Black Geographies.” <i>Antipode</i> 51, no. 2 (March 2019): 419–437.</p>
                         <p>Bluestone, Daniel. “Chicago’s Mecca Flat Blues.” <i>Journal of the Society of Architectural Historians</i> 57, no. 4 (December 1998): 382-403.</p>
                         <p>Brooks, Gwendolyn. <i>In the Mecca.</i> New York: Harper & Row, 1968.</p>
                         <p>Browne, Simone. <i>Dark Matters: on the Surveillance of Blackness.</i> Durham: Duke University Press, 2016.</p>
+                        <p>Cadogan, Garnette. “Walking While Black.” <i>LitHub,</i> July 8, 2016. https://lithub.com/walking-while-black/</p>
                         <p>Crawford, Romi. “Yours in Blackness: Blocks, Corners, and Other Desire Settings.” <i>NKA (Brooklyn, N.Y.)</i> 34, no. 1 (2014): 80–89.</p>
                         <p>Hansell, William. “Gwendolyn Brooks’s “In the Mecca”: A Rebirth into Blackness.” <i>Negro American Literature Forum</i> 8, no. 2 (Summer 1974): 199-209.</p>
                         <p>Heathcott, Joseph. “Reading the Accidental Archive: Architecture, Ephemera, and Landscape as Evidence of an Urban Public Culture.” <i>Winterthur Portfolio</i> 41, no. 4 (Winter 2007): 239-268.</p>
@@ -69,7 +70,7 @@
             </div>
         </section>
                 <!-- Bibliography-->
-                <section class="page-section" id="thank-you">
+                <section class="page-section-secondary" id="thank-you">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
