--- a/biblio.html
+++ b/biblio.html
@@ -41,52 +41,70 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="mt-0">Bibliography</h2>
+                        <h2 class="mt-0">First, A Thank-You</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                        <p>Altshuler, Joseph. “Historic Mecca Flats apartment building unearthed in Chicago.” <i>The Architect’s Newspaper</i>, July 20, 2018. https://www.archpaper.com/2018/07/mecca-flats-chicago-crown-hall/.</p>
-                        <p>Attoh, Kafui. “What Kind of Right Is the Right to the City?” <i>Progress in Human Geography</i> 35, no. 5 (February 14, 2011): 669–685.</p>
-                        <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919.</i> Chicago: University of Chicago Press, 2004.</p>
-                        <p>Bartholomew Ortega, Kirsten. “The Black Flaneuse: Gwendolyn Brooks’s “In the Mecca.” <i>Journal of Modern Literature</i> 30, no.4 (Summer 2007): 139-155. </p>
-                        <p>Bluestone, Daniel. “Chicago’s Mecca Flat Blues.” <i>Journal of the Society of Architectural Historians</i> 57, no. 4 (December 1998): 382-403.</p>
-                        <p>Brooks, Gwendolyn. <i>In the Mecca.</i> New York: Harper & Row, 1968.</p>
-                        <p>Browne, Simone. <i>Dark Matters: on the Surveillance of Blackness.</i> Durham: Duke University Press, 2016.</p>
-                        <p>Cadogan, Garnette. “Walking While Black.” <i>LitHub,</i> July 8, 2016. https://lithub.com/walking-while-black/.</p>
-                        <p>Crawford, Romi. “Yours in Blackness: Blocks, Corners, and Other Desire Settings.” <i>NKA (Brooklyn, N.Y.)</i> 34, no. 1 (2014): 80–89.</p>
-                        <p>Department of Cultural Affairs and Special Events. “Mecca Flat Blues.” City of Chicago. Accessed December 6, 2020. https://www.chicago.gov/city/en/depts/dca/supp_info/MeccaFlat.html.</p>
-                        <p>Hansell, William. “Gwendolyn Brooks’s “In the Mecca”: A Rebirth into Blackness.” <i>Negro American Literature Forum</i> 8, no. 2 (Summer 1974): 199-209.</p>
-                        <p>Heathcott, Joseph. “Reading the Accidental Archive: Architecture, Ephemera, and Landscape as Evidence of an Urban Public Culture.” <i>Winterthur Portfolio</i> 41, no. 4 (Winter 2007): 239-268.</p>
-                        <p>Foucault, Michel. ”Panopticonism.” In <i>Discipline and Punish: The Birth of the Prison.</i> New York: Random House, 1977.</p>
-                        <p>IIT. “Building History.” Accessed December 6, 2020. http://buildinghistory.iit.edu/neatline/show/map#records/147.</p>
-                        <p>IIT Architecture Chicago. “MECCA FLAT REVEALED ROUND TABLE.” S.R. Crown Hall. Uploaded August 20, 2018. Vimeo, 1:07:52. https://vimeo.com/285866366.</p>
-                        <p>Kukrechtova, Daniela. “The Death and Life of a Chicago Edifice: Gwendolyn Brooks’s “In the Mecca.”” <i>African American Review</i> 42, no. 2-3 (Summer/Fall 2009): 457-472.</p>
-                        <p>Lowney, John. “”A material collapse that is Construction”: History and Counter-Memory in Gwendolyn Brooks’s In the Mecca.” <i>MELUS</i> 23, no. 3 (Fall 1998): 3-20.</p>
-                        <p>Martin, John Bartlow. "The Strangest Place in Chicago: Pictorial Comment by Ben Shahn." <i>Harper's Magazine</i>, Dec 01, 1950. http://turing.library.northwestern.edu/login?url=https://www-proquest-com.turing.library.northwestern.edu/docview/1301530998?accountid=12861.</p>
-                        <p>Rinner, Jeni. “From Bronzeville to the Mecca and After: Gwendolyn Brooks and the location of Black Identity.” <i>MELUS</i> 40, no. 4 (Winter 2015): 150-172.</p>
-                        <p>Sanders, Topher, and Kate Rabinowitz. “Walking While Black.” <i>ProPublica</i>, November 16, 2017. https://features.propublica.org/walking-while-black/jacksonville-pedestrian-violations-racial-profiling/.</p>
-                        <p>Shabazz, Rashad. <i>Spatializing Blackness: Architectures of Confinement and Black Masculinity in Chicago</i>. Urbana: University of Illinois Press, 2015.</p>
-                        <p>Smith, Preston H. <i>Racial Democracy and the Black Metropolis : Housing Policy in Postwar Chicago</i>. Minneapolis: University of Minnesota Press, 2012.</p>
-                        <p>Uricchio, William. “A ‘Proper Point of View’: The Panorama and Some of Its Early Media Iterations.” <i>Early Popular Visual Culture</i> 9, no. 3 (August 2011): 225–238.</p>
-                        <p>WTTW Chicago. “Chicago Tonight full episode August 7, 2018.” Streamed live on August 7, 2018. YouTube video, 57:12. https://www.youtube.com/watch?v=s1zdyjpxyU0.</p>
-                    </p>
+                            I would like to extend my gratitude to <a href="http://www.terirueb.net/" target="_blank">Teri Rueb</a> for our conversation on her work that inspired the form of this project. 
+                            <p>I would also like to thank D.N. Rodowick and Solveig Nelson for sharing resources from <a href="https://graycenter.uchicago.edu/fellowships/overlay" target="_blank">Overlay</a> (2015). </p>
+                            <p>Last but certainly not least, many thank-you's to Shelby Lynn Bias for her performances of excerpts from Gwendolyn Brooks's <i>In the Mecca</i>. You can find Shelby on Instagram at <a href="https://www.instagram.com/lilshelbylynn/?hl=en" target="_blank">@lilshelbylynn</a>. </p>
+                        </p>   
                     </div>
                 </div>
             </div>
         </section>
-                <!-- Bibliography-->
+         <!-- Bibliography-->
                 <section class="page-section-secondary" id="thank-you">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <h2 class="mt-0">And, a Thank-You</h2>
+                                <h2 class="mt-0">Bibliography</h2>
                                 <hr class="divider light my-4" />
                                 <p class="mb-4">
-                                    I would like to extend my gratitude to Teri Rueb for our conversations that inspired the form of this project. I would also like to thank Solveig Nelson and D.N. Rodowick for sharing resources from the <i>Overlay</i> project (2015). Thank you to Daniel Schulman and others at D.C.A.S.E. for information from their 2014 exhibition <i>Mecca Flat Blues</i>. Last but certainly not least, many thank-you's to Shelby Bias for her performances of Gwendolyn Brooks's <i>In the Mecca</i>, recorded for this project.
-                                    </p>   
+                                <p>Altshuler, Joseph. “Historic Mecca Flats apartment building unearthed in Chicago.” <i>The Architect’s Newspaper</i>, July 20, 2018. https://www.archpaper.com/2018/07/mecca-flats-chicago-crown-hall/.</p>
+                                <p>Attoh, Kafui. “What Kind of Right Is the Right to the City?” <i>Progress in Human Geography</i> 35, no. 5 (February 14, 2011): 669–685.</p>
+                                <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919.</i> Chicago: University of Chicago Press, 2004.</p>
+                                <p>Bartholomew Ortega, Kirsten. “The Black Flaneuse: Gwendolyn Brooks’s “In the Mecca.” <i>Journal of Modern Literature</i> 30, no.4 (Summer 2007): 139-155. </p>
+                                <p>Bluestone, Daniel. “Chicago’s Mecca Flat Blues.” <i>Journal of the Society of Architectural Historians</i> 57, no. 4 (December 1998): 382-403.</p>
+                                <p>BrookdaleTV. “Visiting Writers Series Interview with Garnette Cadogan.” Uploaded Apr 24, 2017. YouTube video, 26:13. https://www.youtube.com/watch?v=S8LnxpSt5PQ.</p>
+                                <p>Brooks, Gwendolyn. <i>In the Mecca.</i> New York: Harper & Row, 1968.</p>
+                                <p>Browne, Simone. <i>Dark Matters: on the Surveillance of Blackness.</i> Durham: Duke University Press, 2016.</p>
+                                <p>Cadogan, Garnette. “Walking While Black.” <i>LitHub,</i> July 8, 2016. https://lithub.com/walking-while-black/.</p>
+                                <p>Crawford, Romi. “Yours in Blackness: Blocks, Corners, and Other Desire Settings.” <i>NKA (Brooklyn, N.Y.)</i> 34, no. 1 (2014): 80–89.</p>
+                                <p>Department of Cultural Affairs and Special Events. “Mecca Flat Blues.” City of Chicago. Accessed December 6, 2020. https://www.chicago.gov/city/en/depts/dca/supp_info/MeccaFlat.html.</p>
+                                <p>Hansell, William. “Gwendolyn Brooks’s “In the Mecca”: A Rebirth into Blackness.” <i>Negro American Literature Forum</i> 8, no. 2 (Summer 1974): 199-209.</p>
+                                <p>Heathcott, Joseph. “Reading the Accidental Archive: Architecture, Ephemera, and Landscape as Evidence of an Urban Public Culture.” <i>Winterthur Portfolio</i> 41, no. 4 (Winter 2007): 239-268.</p>
+                                <p>Foucault, Michel. ”Panopticonism.” In <i>Discipline and Punish: The Birth of the Prison.</i> New York: Random House, 1977.</p>
+                                <p>IIT. “Building History.” Accessed December 6, 2020. http://buildinghistory.iit.edu/neatline/show/map#records/147.</p>
+                                <p>IIT Architecture Chicago. “MECCA FLAT REVEALED ROUND TABLE.” S.R. Crown Hall. Uploaded August 20, 2018. Vimeo, 1:07:52. https://vimeo.com/285866366.</p>
+                                <p>Kukrechtova, Daniela. “The Death and Life of a Chicago Edifice: Gwendolyn Brooks’s “In the Mecca.”” <i>African American Review</i> 42, no. 2-3 (Summer/Fall 2009): 457-472.</p>
+                                <p>Lowney, John. “”A material collapse that is Construction”: History and Counter-Memory in Gwendolyn Brooks’s In the Mecca.” <i>MELUS</i> 23, no. 3 (Fall 1998): 3-20.</p>
+                                <p>Martin, John Bartlow. "The Strangest Place in Chicago: Pictorial Comment by Ben Shahn." <i>Harper's Magazine</i>, Dec 01, 1950. http://turing.library.northwestern.edu/login?url=https://www-proquest-com.turing.library.northwestern.edu/docview/1301530998?accountid=12861.</p>
+                                <p>Rinner, Jeni. “From Bronzeville to the Mecca and After: Gwendolyn Brooks and the location of Black Identity.” <i>MELUS</i> 40, no. 4 (Winter 2015): 150-172.</p>
+                                <p>Sanders, Topher, and Kate Rabinowitz. “Walking While Black.” <i>ProPublica</i>, November 16, 2017. https://features.propublica.org/walking-while-black/jacksonville-pedestrian-violations-racial-profiling/.</p>
+                                <p>Shabazz, Rashad. <i>Spatializing Blackness: Architectures of Confinement and Black Masculinity in Chicago</i>. Urbana: University of Illinois Press, 2015.</p>
+                                <p>Smith, Preston H. <i>Racial Democracy and the Black Metropolis : Housing Policy in Postwar Chicago</i>. Minneapolis: University of Minnesota Press, 2012.</p>
+                                <p>Uricchio, William. “A ‘Proper Point of View’: The Panorama and Some of Its Early Media Iterations.” <i>Early Popular Visual Culture</i> 9, no. 3 (August 2011): 225–238.</p>
+                                <p>WTTW Chicago. “Chicago Tonight full episode August 7, 2018.” Streamed live on August 7, 2018. YouTube video, 57:12. https://www.youtube.com/watch?v=s1zdyjpxyU0.</p>
+                            </p>
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> 
+            <!-- Thank You-->
+        <section class="page-section" id="thank-you">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <h2 class="mt-0">Audio Attributions</h2>
+                        <hr class="divider light my-4" />
+                        <p class="mb-4">
+                        <p><a href="https://freesound.org/people/nixeno/" target="_blank">Ninexo</a> </p>
+                        <p><a href="https://freesound.org/people/OGsoundFX/" target="_blank">OGsoundFX</a></p>
+                        </p>   
+                    </div>
+                </div>
+            </div>
+        </section>       
         <!-- Footer-->
         <footer class="bg-light py-5">
             <div class="container"><div class="small text-center text-muted">Black Arts Archive Sawyer Seminar 2020</div></div>
