--- a/biblio.html
+++ b/biblio.html
@@ -98,8 +98,17 @@
                         <h2 class="mt-0">Audio Attributions</h2>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                        <p><a href="https://freesound.org/people/nixeno/" target="_blank">Ninexo</a> </p>
+                        <p><a href="https://freesound.org/people/ascap/" target="_blank">ascap</a></p>
+                        <p><a href="https://freesound.org/people/cmusounddesign/" target="_blank">cmusounddesign</a></p>
+                        <p><a href="https://freesound.org/people/DRFX/" target="_blank">DRFX</a></p>
+                        <p><a href="https://freesound.org/people/Erokia/" target="_blank">Erokia</a></p>
+                        <p><a href="https://freesound.org/people/InspectorJ/" target="_blank">InspectorJ</a></p>
+                        <p><a href="https://freesound.org/people/nixeno/" target="_blank">Ninexo</a></p>
                         <p><a href="https://freesound.org/people/OGsoundFX/" target="_blank">OGsoundFX</a></p>
+                        <p><a href="https://freesound.org/people/pcaeldries/" target="_blank">pcaeldries</a></p>
+                        <p><a href="https://freesound.org/people/THPSounds/" target="_blank">THPSounds</a></p>
+                        <p></p>
+                        <p> Outro music by <a href="https://freesound.org/people/YellowTree/" target="_blank">YellowTree</a></p>
                         </p>   
                     </div>
                 </div>
