--- a/biblio.html
+++ b/biblio.html
@@ -102,13 +102,16 @@
                         <p><a href="https://freesound.org/people/cmusounddesign/" target="_blank">cmusounddesign</a></p>
                         <p><a href="https://freesound.org/people/DRFX/" target="_blank">DRFX</a></p>
                         <p><a href="https://freesound.org/people/Erokia/" target="_blank">Erokia</a></p>
+                        <p><a href="https://freesound.org/people/foad/" target="_blank">foad</a></p>
                         <p><a href="https://freesound.org/people/InspectorJ/" target="_blank">InspectorJ</a></p>
+                        <p><a href="https://freesound.org/people/koulaxizis/" target="_blank">koulaxizis</a></p>
                         <p><a href="https://freesound.org/people/nixeno/" target="_blank">Ninexo</a></p>
                         <p><a href="https://freesound.org/people/OGsoundFX/" target="_blank">OGsoundFX</a></p>
                         <p><a href="https://freesound.org/people/pcaeldries/" target="_blank">pcaeldries</a></p>
                         <p><a href="https://freesound.org/people/THPSounds/" target="_blank">THPSounds</a></p>
+                        <p><a href="https://freesound.org/people/XHALE303/" target="_blank">XHALE303</a></p>
                         <p></p>
-                        <p> Outro music by <a href="https://freesound.org/people/YellowTree/" target="_blank">YellowTree</a></p>
+                        <p> And outro music by <a href="https://freesound.org/people/YellowTree/" target="_blank">YellowTree</a></p>
                         </p>   
                     </div>
                 </div>
