Images and About page text

--- a/about.html
+++ b/about.html
@@ -45,7 +45,19 @@
                     <div class="col-lg-8">
                         <h2 class="mt-0">A Material Collapse that is Construction</h2>
                         <hr class="divider light my-4" />
-                        <p class="mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="mb-4"><i>A Material Collapse That is Construction</i> is a 30-minute audio experience situated around Crown Hall at IIT 
+                            in Bronzeville, Chicago. The project strives to explore the complicated and layered history of the site through the building 
+                            that preceded the campus—The Mecca Apartments. Affectionately known as “The Mecca Flats” or simply “The Mecca,” the building 
+                            was a hub of black culture and life in Bronzeville for nearly half a century. When the Mecca was demolished in 1951 to clear 
+                            the way for IIT’s campus expansion, it signaled the loss of a historic community. Through poetry, soundscapes, music, and visual 
+                            analysis, <i>A Material Collapse That is Construction</i> proposes deeper reflection on the legacy of this site, and its implications 
+                            for socio-spatial politics in the city.
+                            <img src="i026261_pm.png" alt="Chicago History Museum, ICHi-026261; Mildred Mead, photographer">>
+                            <img src="i068219.png"alt="Chicago History Museum, ICHi-068219; Bernice R. Davis, photographer">>
+                            <p>Participants can either visit Crown Hall and walk through the experience using their location data, or click through the map from 
+                            home. Soon, participants will also have the opportunity to submit their own audio reflections on what they learned during the half-hour. 
+                            Responses will be pinned to the final marker for new participants to listen and respond to.</p> 
+                            </p>
                     </div>
                 </div>
             </div>
@@ -57,7 +69,8 @@
                     <div class="col-lg-8">
                         <h2 class="mt-0">Black Arts Archive Sawyer Seminar</h2>
                         <hr class="divider light my-4" />
-                        <p class="mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> was created for a class taught by Dr. Aymar Jean Christian and Dr. Rebecca Zorach in 2020 for the Black Arts Consortium's Mellon-Sawyer Seminar entitled “The Black Arts Archive: The Challenge of Translation.” 
+                            <!-- <a href="http://www.terirueb.net/" target="_blank">More information on the Seminar can be found here.</a> </p> -->
                     </div>
                 </div>
             </div>
