--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </header>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Black Arts Archive Sawyer Seminar 2020</div></div>
+            <div class="container"><div class="small text-center text-muted">Black Arts Archive Sawyer Seminar 2020. Image Credit: Chicago History Museum, ICHi-026253; Bernice R. Davis, photographer.</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
