--- a/biblio.html
+++ b/biblio.html
@@ -91,7 +91,7 @@
                     </div>
                 </section> 
             <!-- Thank You-->
-        <section class="page-section" id="thank-you">
+        <section class="page-section-secondary" id="thank-you">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
