--- a/about.html
+++ b/about.html
@@ -45,15 +45,15 @@
                     <div class="col-lg-8">
                         <h2 class="mt-0">A Material Collapse that is Construction</h2>
                         <hr class="divider light my-4" />
-                        <p class="mb-4"><i>A Material Collapse That is Construction</i> is a 30-minute audio experience situated around Crown Hall at IIT 
+                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> is a 30-minute audio experience situated around Crown Hall at IIT 
                             in Bronzeville, Chicago. The project strives to explore the complicated and layered history of the site through the building 
                             that preceded the campus—The Mecca Apartments. Affectionately known as “The Mecca Flats” or simply “The Mecca,” the building 
                             was a hub of black culture and life in Bronzeville for nearly half a century. When the Mecca was demolished in 1951 to clear 
                             the way for IIT’s campus expansion, it signaled the loss of a historic community. Through poetry, soundscapes, music, and visual 
                             analysis, <i>A Material Collapse That is Construction</i> proposes deeper reflection on the legacy of this site, and its implications 
-                            for socio-spatial politics in the city.
-                            <img src="i026261_pm.png" alt="Chicago History Museum, ICHi-026261; Mildred Mead, photographer">>
-                            <img src="i068219.png"alt="Chicago History Museum, ICHi-068219; Bernice R. Davis, photographer">>
+                            for socio-spatial politics in the city.</p>
+                            <img class="sideBySideImg" src="assets/img/about-image.png" alt="Chicago History Museum, ICHi-026261; Mildred Mead, photographer and ICHi-068219; Bernice R. Davis, photographer">
+                            
                             <p>Participants can either visit Crown Hall and walk through the experience using their location data, or click through the map from 
                             home. Soon, participants will also have the opportunity to submit their own audio reflections on what they learned during the half-hour. 
                             Responses will be pinned to the final marker for new participants to listen and respond to.</p> 
