--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                             in Bronzeville, Chicago. The project strives to explore the complicated and layered history of the site through the building 
                             that preceded the campus—The Mecca Apartments. Affectionately known as “The Mecca Flats” or simply “The Mecca,” the building 
                             was a hub of black culture and life in Bronzeville for nearly half a century. When the Mecca was demolished in 1951 to clear 
-                            the way for IIT’s campus expansion, it signaled the loss of a historic community. Through poetry, soundscapes, music, and visual 
+                            the way for IIT’s campus expansion, it signaled the loss of a historic community. Through poetry, soundscapes, music, and critical 
                             analysis, <i>A Material Collapse That is Construction</i> proposes deeper reflection on the legacy of this site, and its implications 
                             for socio-spatial politics in the city.</p>
                             <img class="sideBySideImg" src="assets/img/about-image.png" alt="Chicago History Museum, ICHi-026261; Mildred Mead, photographer and ICHi-068219; Bernice R. Davis, photographer">
@@ -69,7 +69,7 @@
                     <div class="col-lg-8">
                         <h2 class="mt-0">Black Arts Archive Sawyer Seminar</h2>
                         <hr class="divider light my-4" />
-                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> was created for a class taught by Dr. Aymar Jean Christian and Dr. Rebecca Zorach in 2020 for the Black Arts Consortium's Mellon-Sawyer Seminar entitled “The Black Arts Archive: The Challenge of Translation.” 
+                        <p class="mb-4"><p><i>A Material Collapse That is Construction</i> was created for a class taught by Dr. Aymar Jean Christian and Dr. Rebecca Zorach at Northwestern University in 2020 for the Black Arts Consortium's Mellon-Sawyer Seminar entitled “The Black Arts Archive: The Challenge of Translation.” 
                             <!-- <a href="http://www.terirueb.net/" target="_blank">More information on the Seminar can be found here.</a> </p> -->
                     </div>
                 </div>
