--- a/biblio.html
+++ b/biblio.html
@@ -65,7 +65,7 @@
                                 <p>Bachin, Robin Faith. <i>Building the South Side : Urban Space and Civic Culture in Chicago, 1890-1919.</i> Chicago: University of Chicago Press, 2004.</p>
                                 <p>Bartholomew Ortega, Kirsten. “The Black Flaneuse: Gwendolyn Brooks’s “In the Mecca.” <i>Journal of Modern Literature</i> 30, no.4 (Summer 2007): 139-155. </p>
                                 <p>Bluestone, Daniel. “Chicago’s Mecca Flat Blues.” <i>Journal of the Society of Architectural Historians</i> 57, no. 4 (December 1998): 382-403.</p>
-                                <p>BrookdaleTV. “Visiting Writers Series Interview with Garnette Cadogan.” Uploaded Apr 24, 2017. YouTube video, 26:13. https://www.youtube.com/watch?v=S8LnxpSt5PQ.</p>
+                                <p>BrookdaleTV. “Visiting Writers Series Interview with Garnette Cadogan.” Uploaded April 24, 2017. YouTube video, 26:13. https://www.youtube.com/watch?v=S8LnxpSt5PQ.</p>
                                 <p>Brooks, Gwendolyn. <i>In the Mecca.</i> New York: Harper & Row, 1968.</p>
                                 <p>Browne, Simone. <i>Dark Matters: on the Surveillance of Blackness.</i> Durham: Duke University Press, 2016.</p>
                                 <p>Cadogan, Garnette. “Walking While Black.” <i>LitHub,</i> July 8, 2016. https://lithub.com/walking-while-black/.</p>
@@ -91,7 +91,7 @@
                     </div>
                 </section> 
             <!-- Thank You-->
-        <section class="page-section-secondary" id="thank-you">
+        <section class="page-section" id="thank-you">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
