--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             </div>
         </section>
         <!-- About Black Arts Archive-->
-        <section class="page-section" id="about-baa">
+        <section class="page-section-secondary" id="about-baa">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
