minor changes -- wording, etc.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapclick.html">Click Through</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Walk Through</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Move Through</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
 
@@ -55,7 +55,7 @@
                             <p></p>
                             <img class="sideBySideImg" src="assets/img/about-image.png" alt="Chicago History Museum, ICHi-026261; Mildred Mead, photographer and ICHi-068219; Bernice R. Davis, photographer">
                             <p></p>
-                            <p>Participants can either visit Crown Hall and walk through the experience using their location data, or click through the map from 
+                            <p>Participants can either visit Crown Hall and move through the experience using their location data, or click through the map from 
                             home. Soon, participants will also have the opportunity to submit their own audio reflections on what they learned during the half-hour. 
                             Responses will be pinned to the final marker for new participants to listen and respond to.</p> 
                             </p>
