--- a/biblio.html
+++ b/biblio.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapclick.html">Click Through</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Walk Through</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Move Through</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
 
