--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     l4.4,8.5c0.2,0.4,0.6,0.5,1,0.3c0.4-0.2,0.5-0.6,0.3-1L2,10l50.6,0c0.4,0,0.8-0.3,0.8-0.7S53,8.5,52.6,8.5L2,8.5l3.8-7.4
                                     c0.2-0.4,0-0.8-0.3-1C5.4,0,5.3,0,5.2,0C4.9,0,4.6,0.1,4.5,0.4L0.1,8.9c0,0,0,0,0,0C0.1,9,0,9.1,0,9.2C0,9.1,0,9.1,0,9.2z"/>
                             </svg>       
-                            Walk Through
+                            Move Through
                         </a>                        
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="./mapclick.html">
                             Click Through 
