--- a/biblio.html
+++ b/biblio.html
@@ -37,7 +37,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapclick.html">Click Through</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Move Through</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./catalog.html">Catalog</a></li> <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
 
                     </ul>
@@ -127,7 +127,7 @@
         </section>       
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Black Arts Archive Sawyer Seminar 2020</div></div>
+            <div class="container"><div class="small text-center text-muted">Black Arts Archive Sawyer Seminar 2020 - Household Archaeology 2021</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
