--- a/mapmove.html
+++ b/mapmove.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapclick.html">Click Through</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./mapmove.html">Move Through</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./catalog.html">Catalog</a></li> <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./biblio.html">Bibliography</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./contact.html">Contact</a></li>
 
                     </ul>
