--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
                                     <div class="row catalog-entry">
                                         <div class="col-md-4 col-xs-12">
                                             <figure>
-                                                <img src="/assets/img/Mecca Flats Photos, R. Graff/Aspirin_pills_MeccaFlats.jpg" alt="Asprin Pills">
+                                                <img src="/assets/img/Aspirin_pills_MeccaFlats.jpg" alt="Asprin Pills">
                                                 <figcaption> Photograph by Rebecca Graff, Mecca Flats Archaeological Salvage Project (2018), Lake Forest College/Digital Chicago. </figcaption>
                                             </figure> 
                                         </div>
