--- a/catalog.html
+++ b/catalog.html
@@ -69,7 +69,7 @@
                                                 <source src="horse.mp3" type="audio/mpeg">
                                             Your browser does not support the audio element.
                                             </audio>
-                                            <p class= "longDescription">Description</p>
+                                            <p>Description</p>
                                         </div>
                                     </div>
                                 </template>
