--- a/mapclick.html
+++ b/mapclick.html
@@ -90,7 +90,7 @@
                     ...
                     </div>
                     <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" button onclick="showModal(randomProperty(entries))">Another Artifact</button>
                     </div>
                 </div>
             </div>
