--- a/mapclick.html
+++ b/mapclick.html
@@ -82,10 +82,10 @@
                         <img id="objectModalImg">
                         <figcaption> Photograph by Rebecca Graff, Mecca Flats Archaeological Salvage Project (2018), Lake Forest College/Digital Chicago. </figcaption>
                     </figure> 
-                    <audio controls id="objectModalAudio">
+                    <!-- <audio controls id="objectModalAudio">
                         <source src="horse.mp3" type="audio/mpeg" id="objectModalAudioSource">
                     Your browser does not support the audio element.
-                    </audio>
+                    </audio> -->
                     <div id="objectModalBody">
                     ...
                     </div>
