--- a/object.html
+++ b/object.html
@@ -46,15 +46,17 @@
                 </div>
             </div>
         </nav>
-        <!-- Object Catalog-->
+        <!-- Object Pinboard-->
         <section class="page-section" id="about-mecca">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="mt-0">Artifact Catalog</h2>
+                        <h2 class="mt-0">Community Pinboard</h2>
+                    </br>
+                        <p>Upload images of similar objects from your own home, or scroll through what others have posted.</p>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                            <div class="container entriescontainer">
+                            <!-- <div class="container entriescontainer">
                                 <template>
                                     <div class="row catalog-entry">
                                         <div class="col-md-4 col-xs-12">
@@ -70,11 +72,11 @@
                                             Your browser does not support the audio element.
                                             </audio>
                                             <p>Description</p>
-                                            <p><a href="object.html">See the Community Pinboard</a></p>
                                         </div>
                                     </div>
                                 </template>
-                              </div>   </p>
+                              </div>   </p> -->
+                        
                     </div>
                 </div>
             </div>
