--- a/object.html
+++ b/object.html
@@ -76,7 +76,15 @@
                                     </div>
                                 </template>
                               </div>   </p> -->
-                        
+                              <label for="objects">Select an artifact:</label>
+
+                              <select name="objects" id="objects">
+                                <option value="Asprin Pills">Asprin Pills</option>
+                                <option value="Asprin Bottle">Asprin Bottle</option>
+                                <option value="Bennington Marble">Bennington Marble</option>
+                                <option value="Glass Marbles">Glass Marbles</option>
+                                <option value="Ceramic Shard">Ceramics</option>
+                              </select>    
                     </div>
                 </div>
             </div>
