--- a/object.html
+++ b/object.html
@@ -23,8 +23,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Roboto+Slab:wght@100&display=swap" rel="stylesheet">
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/pinboard.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation -->
@@ -56,38 +58,61 @@
                         <p>Upload images of similar objects from your own home, or scroll through what others have posted.</p>
                         <hr class="divider light my-4" />
                         <p class="mb-4">
-                            <!-- <div class="container entriescontainer">
-                                <template>
-                                    <div class="row catalog-entry">
-                                        <div class="col-md-4 col-xs-12">
-                                            <figure>
-                                                <img src="/assets/img/Aspirin_pills_MeccaFlats.jpg" alt="Asprin Pills">
-                                                <figcaption> Photograph by Rebecca Graff, Mecca Flats Archaeological Salvage Project (2018), Lake Forest College/Digital Chicago. </figcaption>
-                                            </figure> 
-                                        </div>
-                                        <div class="col-md-8 col-xs-12">
-                                            <h3 class="name">Name</h3>
-                                            <audio controls>
-                                                <source src="horse.mp3" type="audio/mpeg">
-                                            Your browser does not support the audio element.
-                                            </audio>
-                                            <p>Description</p>
-                                        </div>
-                                    </div>
-                                </template>
-                              </div>   </p> -->
                               <label for="objects">Select an artifact:</label>
 
-                              <select name="objects" id="objects">
-                                <option value="Asprin Pills">Asprin Pills</option>
-                                <option value="Asprin Bottle">Asprin Bottle</option>
-                                <option value="Bennington Marble">Bennington Marble</option>
-                                <option value="Glass Marbles">Glass Marbles</option>
-                                <option value="Ceramic Shard">Ceramics</option>
+                              <select name="objects" id="objects" onchange="loadObject(document.getElementById('objects').value)">
+                                <option value="placeholder">Select an object</option>
                               </select>    
                     </div>
                 </div>
             </div>
+            <div class="container entriescontainer">
+                <div class="row catalog-entry">
+                    <div class="col-md-4 col-xs-12">
+                        <h3 class="name">Name</h3>
+                        <figure>
+                            <img src="/assets/img/Aspirin_pills_MeccaFlats.jpg" alt="Asprin Pills">
+                            <figcaption> Photograph by Rebecca Graff, Mecca Flats Archaeological Salvage Project (2018), Lake Forest College/Digital Chicago. </figcaption>
+                        </figure> 
+                        <p class="submission-cta">Have something like this?<br/> <a href="#" target="_blank">Submit your image here.</a></p>
+                    </div>
+                    <div class="col-md-8 col-xs-12">
+                        <div class="community-pinboard">
+                            <!-- <template>
+                                <div class="image-tile">
+                                    <figure>
+                                        <img src="/assets/community-pinboard/" alt="Community Submitted Image">
+                                        <figcaption></figcaption>
+                                    </figure>
+                                </div>
+                            </template>
+
+                            <div class="image-tile">
+                                <figure>
+                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
+                                    <figcaption>By XXX</figcaption>
+                                </figure>
+                            </div>
+                            <div class="image-tile">
+                                <figure>
+                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
+                                    <figcaption>By YYY</figcaption>
+                                </figure>
+                            </div>
+                            <div class="image-tile">
+                                <figure>
+                                    <img src="/assets/community-pinboard/PXL_20210606_173828243.jpg" alt="Community Submitted Image">
+                                    <figcaption>By ZZZ</figcaption>
+                                </figure>
+                            </div> -->
+                            
+                            <div class="image-tile hidden fallback-text">
+                                <h4 class="submission-cta">This object has no community submissions. <br/><br/><a href="#" target="_blank">Share your image here</a></p></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>   
         </section>
         </section>
         <!-- Footer-->
@@ -104,7 +129,11 @@
         <script src="js/scripts.js"></script>
         <script src="js/catalog.js"></script>
         <script>
-            window.onload = loadEntries()
+            window.onload = function(){
+                loadObjectList()
+                loadObject(window.location.search)
+                getGoogleSheet()
+            }
         </script>
     </body>
 </html>
